syntax = "proto3";

package user_service;

option go_package = "genproto/user_service";

message Empty {}

message DeleteReq {
    string id = 1;
}

message GetByIdReq {
    string id = 1;
}

message GetListReq {
    int32 limit = 1;
    int32 page = 2;
}

message Common {
    string table_name = 1;
    string column_name = 2;
    string expvalue = 3;

}

message CommonResp {
   bool is_exists = 1;

}

message User {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string fullname = 5;
    string user_role = 6; 
    string created_at = 7; 
    string updated_at = 8;
    string deleted_at = 9;
}


message UserCreateReq {
    string username = 1;
    string email = 2;
    string password = 3;
    string fullname = 4;
    string user_role = 5;
    string otp=6;
}


message UserLogIn {
    string username = 1;
    string password = 2;
}
message UserGetListResp {
    repeated User users = 2;
    int32 count = 1;
}

message UserUpdateReq {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string full_name = 5;
    string user_role = 6;           
    string updated_at = 7;
}


message Clamis{
    string user_id=1;
    string user_role =2;
}

message CheckUser{
    string email=1;
}
message OtpData{
    string otp=1;
    string email =2;
}

message CheckOtpResp{
    string is_right=1;
}

message AuthResp{
    string access_token=1;
}

message CheckExists{
    string status=1;
    bool is_exists =2;
}
